--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <p id="currentDay" class="lead"></p>
   </header>
   <div class="container">
-    <!-- Timeblocks go here -->
+    <!-- Timeblocks go here. location of where the time babies are gonna be-->
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  <script src="assets/js/script.js"></script>
+  <script src="./assets/javascript/script.js"></script>
 </body>
 
 </html>
